<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">vrEMDR</string>

    <string name="title_activity_main">vrEMDR Main Menu</string>
    <string name="start_session">Start session</string>
    <string name="settings">Settings</string>
    <string name="website_button">Check us out</string>

    <string name="use_slow_ball_speed">Use slow ball speed</string>
    <string name="use_forest_background">Use forest background</string>
    <string name="use_calming_music">Play calming music</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="title_activity_countdown">CountdownActivity</string>

    <string name="dotdotdot">…</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
</resources>