<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <Switch
        android:id="@+id/use_forest_background"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:checked="true"
        android:text="@string/use_forest_background" />

    <Switch
        android:id="@+id/use_slow_ball_speed"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/use_slow_ball_speed" />

    <Switch
        android:id="@+id/play_calming_music"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/use_calming_music" />

    <Button
        android:id="@+id/back_to_menu"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/back_to_menu" />

</LinearLayout>