<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/title_activity_main"
        android:src="@drawable/emdr" />

    <Button
        android:id="@+id/start_session"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/start_session" />

    <Button
        android:id="@+id/settings"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/settings" />

    <Button
        android:id="@+id/launch_website"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/website_button" />

</LinearLayout>